# omni-forecast

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  aw2sqlite-database.md  config.example.toml  pyproject.toml  whitelizard.txt  zensical.toml
.github/workflows/: ci.yml  publish.yml
docs/: advanced-usage.md  architecture.md  changes-0.3.0.md  changes-0.4.0.md  dashboard.md  getting-started.md  improvement-plan.md  index.md  limitations.md  releasing.md  scheduling.md  theory.md
docs/adr/: 0001-sqlite-files-are-the-only-upstream-contract.md  0002-anchored-nowcast-instead-of-temporal-disaggregation.md  0003-empirical-truth-semantics-calibration.md  0004-grounding-defaults-to-bias-only.md
docs/launchd/: com.grounded-weather-forecast.ingest-ensembles.plist  com.grounded-weather-forecast.maintain.plist  com.grounded-weather-forecast.poll.plist  com.grounded-weather-forecast.predict.plist
research/: a forecast.md  g forecast.md  improvement-methods-2026-07.md  o forecast.md  summary.md
scripts/: check_lock_hosts.py
semgrep/: artifact-pointer-paths.yml
semgrep/tests/: artifact_pointer_paths.py
src/grounded_weather_forecast/: __init__.py  artifacts.py  cli.py  config.py  contracts.py  evaluation.py  leads.py  runs.py  solar.py  storage.py  timeutil.py  units.py
src/grounded_weather_forecast/backtest/: engine.py  scores.py  splits.py
src/grounded_weather_forecast/blenders/: __init__.py  anchoring.py  baselines.py  combine.py  conformal.py  emos.py  ewma_grounding.py  experts.py  gbm.py  grounding.py  harmonic_grounding.py  idr.py  protocol.py  registry.py  trimmed.py
src/grounded_weather_forecast/dashboard/: __init__.py  charts.py  context.py  copy.py  derive.py  html.py  model.py  writer.py
src/grounded_weather_forecast/dashboard/assets/: dashboard.css  dashboard.js
src/grounded_weather_forecast/dashboard/zones/: __init__.py  common.py  data_trust.py  evaluation.py  explain.py  internals.py  liveness.py  readiness.py  serving.py
src/grounded_weather_forecast/dataset/: alignment.py  backfill.py  backfill_dynamical.py  ensembles.py  matrix.py  neighbors.py  provider_qc.py  providers.py  qc.py  snapshots.py  station.py  truth.py  truth_qc.py
src/grounded_weather_forecast/metrics/: __init__.py  deterministic.py  dm.py  probabilistic.py
src/grounded_weather_forecast/reports/: __init__.py  alerts.py  correlation.py  drift.py  leaderboard.py  mcs.py  render.py  verification.py
src/grounded_weather_forecast/serve/: __init__.py  history.py  observability.py  predict.py  schema.py  selection.py
src/omni_forecast/: __init__.py  artifacts.py  cli.py  config.py  contracts.py  leads.py
src/omni_forecast/backtest/: __init__.py  engine.py  scores.py  splits.py
src/omni_forecast/blenders/: __init__.py  anchoring.py  baselines.py  combine.py  experts.py  gbm.py  grounding.py  protocol.py  registry.py
src/omni_forecast/dataset/: __init__.py  alignment.py  backfill.py  matrix.py  provider_qc.py  providers.py  qc.py  station.py  truth.py
src/omni_forecast/metrics/: deterministic.py  dm.py  probabilistic.py
src/omni_forecast/serve/: history.py  predict.py  schema.py  selection.py
tests/: conftest.py  test_artifacts.py  test_cli.py  test_cli_e2e.py  test_config.py  test_contracts.py  test_leads.py  test_lockfile.py  test_metrics_deterministic.py  test_metrics_dm.py  test_metrics_probabilistic.py  test_package_metadata.py  test_registry.py  test_runs.py  test_solar.py  test_timeutil.py  test_units.py
tests/backtest/: test_engine.py  test_leakage.py  test_splits.py
tests/blenders/: test_anchoring.py  test_baselines.py  test_conformal.py  test_distributional.py  test_ewma_grounding.py  test_experts.py  test_gbm.py  test_grounding.py  test_protocol.py  test_trimmed.py
tests/dashboard/: test_assets_packaging.py  test_charts.py  test_context.py  test_html.py  test_writer.py  test_zones.py
tests/dataset/: test_alignment.py  test_backfill.py  test_backfill_dynamical.py  test_backfill_dynamical_errors.py  test_context_features.py  test_ensembles.py  test_matrix.py  test_provider_qc.py  test_providers.py  test_qc.py  test_snapshots.py  test_station.py  test_truth.py  test_truth_qc.py
tests/reports/: test_alerts.py  test_correlation.py  test_drift.py  test_leaderboard.py  test_mcs.py  test_render.py
tests/serve/: test_history.py  test_observability.py  test_predict.py  test_selection.py
