[project]
name = "grounded-weather-forecast"
version = "0.4.0"
description = "Station-grounded blending of multi-provider weather forecasts: bias correction, anchoring, and blending judged by a backtest leaderboard."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filelock>=3.20.3",
    "lightgbm>=4.6.0",
    "numpy>=2.5.1",
    "polars>=1.42.1",
    "scipy>=1.18.0",
    "scoringrules>=0.11.0",
]

license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Harold Martin", email = "harold.martin@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = [
    "weather",
    "forecast",
    "blending",
    "ensemble",
    "bias-correction",
    "verification",
    "nowcast",
    "meteorology",
]

[project.scripts]
grounded-weather-forecast = "grounded_weather_forecast.cli:main"

[project.urls]
Homepage = "https://github.com/hbmartin/grounded-weather-forecast"
Documentation = "https://hbmartin.github.io/grounded-weather-forecast/"
Repository = "https://github.com/hbmartin/grounded-weather-forecast"
Issues = "https://github.com/hbmartin/grounded-weather-forecast/issues"

[project.optional-dependencies]
backfill = [
    "dynamical-catalog>=0.1",
    "xarray>=2024.10",
    "zarr>=3.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = ["config.example.toml", "whitelizard.txt"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "codecov>=2.1.13",
    "deptry>=0.23.0",
    "hypothesis>=6.130",
    "lizard>=1.23.0",
    "pyrefly>=0.55.0",
    "pyroma>=5.0.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
docs = [
    "zensical>=0.0.50",
    "mkdocstrings[python]>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
fail_under = 88

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "setup.py", "site-packages", "venv"]

line-length = 88
indent-width = 4
target-version = "py313"

lint.select = ["ALL"]
lint.ignore = [
    "ANN401",
    "BLE001",
    "C901",
    "COM812", # Conflicts with Ruff's formatter.
    "D",
    "E501",
    "EM",
    "PERF401",
    "PLR",
    "PYI034",
    "RUF001",
    "S113",
    "S608",
    "T201",
    "TC",
    "TRY",
    "UP",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",    # Type annotations not required in tests
    "D",      # Docstrings not required in tests
    "INP001", # Test directories are not packages
    "S101",   # assert is expected in tests
    "SLF001", # Private member access is fine in tests
]
"scripts/**/*.py" = [
    "INP001",  # Standalone maintenance scripts, not a package
    "T201",    # print is the output mechanism for these scripts
    "SLF001",  # Scripts intentionally reuse package-internal helpers
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.deptry.per_rule_ignores]
# lightgbm is imported dynamically (importlib) so the package stays importable
# on platforms where its wheels lag. The backfill extra is also lazy:
# dynamical-catalog is imported by string, while xarray and zarr are runtime
# engines used behind that catalog API. Deptry cannot see those relationships.
DEP002 = ["dynamical-catalog", "lightgbm", "xarray", "zarr"]
